--- a/css/front.css
+++ b/css/front.css
@@ -79,6 +79,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     z-index: 9999;
@@ -86,16 +87,8 @@
     overflow-y: scroll;
     opacity: 0;
     pointer-events: none;
-    transition: opacity .8s ease;
-}
-.cn-modal-wrap:before {
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background: rgba(18, 18, 18, 0.97);
-    position: fixed;
+    transition: opacity .8s ease;
 }
 body.cn-modal-open {
     overflow: hidden!important;
