--- a/css/front.css
+++ b/css/front.css
@@ -2,10 +2,6 @@
 .cn-banner, .cn-banner *, .cn-modal, .cn-modal * {
     box-sizing: border-box;
 }
-.cn-banner.cn-banner-hidden, .cn-init-fn {
-    transform: translateY(100%) !important;
-    pointer-events: none !important;
-}
 .cn-banner {
     background: #121212;
     position: fixed;
@@ -71,6 +67,10 @@
 }
 #cn-settings:hover, #cn-settings:focus, #cn-settings:active {
     background: #3d3d3d;
+}
+.cn-banner.cn-banner-hidden, .cn-init-fn {
+    transform: translateY(100%);
+    pointer-events: none;
 }
 /* Banner */
 
